# run-that

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
src/: args.rs  config.rs  main.rs
src/registry/: mod.rs  multi_registry.rs  script_registry.rs
src/registry/source/: cache.rs  git.rs  mod.rs
