[package]
name = "run-that"
version = "0.2.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]

description = "Run scripts from centralized repo"
keywords = [ "cli", "tool", "script", "runner" ]
repository = "https://github.com/dghilardi/run-that"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
update-informer = "1.0.0"
