[package]
name = "run-that"
version = "0.2.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]

description = "Run scripts from centralized repo"
keywords = [ "cli", "tool", "script", "runner" ]
repository = "https://github.com/dghilardi/run-that"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
config = "0.13.3"
serde = "1.0.163"
update-informer = "1.0.0"
